--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <meta name="author" content="Generation Brasil" />
     <meta name="keywords" content="HTML, CSS, JavaScript" />
     <link rel="icon" type="image/svg" href="./assets/img/favicon.svg" />
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Meu Perfil</title>
 </head>
 
 <body>
     <header>
-        <div id="header_content">
+        <div id="header_content" class="flex">
             <div id="titulo">
                 <h1>Generation Brasil</h1>
             </div>
@@ -33,11 +34,11 @@
     </header>
 
     <main>
-      <section id="about">
+      <section id="about" class="flex_start">
         <h2>Sobre a Generation Brasil</h2>
 
-        <div id="conteudo">
-          <img src="./assets/img/user_01.svg" alt="Foto do criador desse conteudo" width="200px" height="200px">
+        <div id="conteudo" class="flex">
+          <img src="./assets/img/user_01.svg" alt="Foto do criador desse conteudo" width="200px" height="200px" class="img_profile">
 
           <article id="texto">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla delectus dolor rem illo doloribus labore natus quasi? Impedit eligendi veniam omnis sunt pariatur dolores distinctio, harum, ab, alias laudantium officia rem sit. Temporibus, est consequuntur eos fuga dicta id mollitia eum quisquam quam placeat provident distinctio! Natus assumenda repellendus quidem! Impedit laborum error voluptatem cum. Eligendi, minima ipsa corporis sequi commodi at aliquam quas ut aperiam saepe? Recusandae, eum totam.</p>
@@ -45,10 +46,10 @@
         </div>
       </section>
 
-      <section id="video">
+      <section id="video" class="flex_start">
         <h2>Meu vídeo favorito</h2>
 
-        <div id="youtube">
+        <div id="youtube" class="flex">
           <iframe width="560"
           height="315"
           src="https://www.youtube.com/embed/Z3_mtwMMuGI?si=F1QiiDYSfsPG3nF0"
@@ -59,7 +60,7 @@
       </section>
     </main>
 
-    <footer>
+    <footer class="flex">
       <section id="redes_sociais">
         <a href="">
           <img src="./assets/img/linkedin.svg" alt="">
