--- a/contato.html
+++ b/contato.html
@@ -88,6 +88,7 @@
 			<h3>Feito com 🧡 por Generation Brasil - 2024</h3>
 		</footer>
 
+        <script src="assets/js/script.js"></script>
 </body>
 
 </html>
